--- a/example.env
+++ b/example.env
@@ -4,7 +4,7 @@ DATABASE_HOST=
 DATABASE_PORT=
 DATABASE_NAME=backhome
 
-DATABASE_URL=postgresql://${DATABASE_USERNAME}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
+# dont even use ${} format in Docker, just don't, it will treat it as literal string instead of its representing variable, it will cost you hours to debug and have no idea why it doesn't work, stupid doc
 DATABASE_URL_WITH_SCHEMA=${DATABASE_URL}?schema=public
 
 TELEGRAM_API_TOKEN=
